--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,3 +1,9 @@
+@very-light-gray: #bbbbbc;
+@light-gray: #8e8f90;
+@gray: #333537;
+@dark-gray: #1d1f21;
+@very-dark-gray: #0e0f10;
+
 @cyan: #96DCBE;
 @blue: #2B57AB;
 @lightblue: #7592C8;
@@ -14,5 +20,6 @@
 @tropical: #c2e3fe;
 @kashmir: #4d7391;
 @banana: #f9eaad;
+@wine: #5e1435;
 @rogue: #ac3d65;
 @pale-green:#98fb98;
