--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -10,13 +10,15 @@
 @syntax-background-color: @midnight;
 
 // Guide colors
-@syntax-wrap-guide-color: darken(@midnight, 50%);
-@syntax-indent-guide-color: @midngiht;
-@syntax-invisible-character-color: @midnight;
+@syntax-wrap-guide-color: @dark-gray;
+@syntax-indent-guide-color: @gray;
+@syntax-invisible-character-color: @gray;
+// TODO: figure out this section
 
 // For find and replace markers
-@syntax-result-marker-color: @tropical;
-@syntax-result-marker-color-selected: lighten(@tropical, 50%);
+@syntax-result-marker-color: @light-gray;
+@syntax-result-marker-color-selected: white;
+// TODO: figure out this section
 
 // Gutter colors
 @syntax-gutter-text-color: darken(@tropical, 10%);
