--- a/styles/base.less
+++ b/styles/base.less
@@ -35,7 +35,7 @@ atom-text-editor {
   .gutter .line-number.folded,
   .gutter .line-number:after,
   .fold-marker:after {
-    color: @tropical;
+    color: @light-gray;
   }
 
   .invisible {
@@ -55,7 +55,7 @@ atom-text-editor {
 // Syntax styles
 
 .syntax--comment {
-  color: @tropical;
+  color: @light-gray;
 }
 
 .syntax--keyword {
@@ -139,7 +139,7 @@ atom-text-editor {
 .syntax--punctuation {
   &.syntax--definition {
     &.syntax--comment {
-      color: @tropical;
+      color: @light-gray;
     }
 
     &.syntax--string,
@@ -237,7 +237,7 @@ atom-text-editor {
   }
 
   &.syntax--separator {
-    background-color: @midnight;
+    background-color: @gray;
     color: @syntax-text-color;
   }
 }
