Gutter color fixing

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -21,9 +21,9 @@
 // TODO: figure out this section
 
 // Gutter colors
-@syntax-gutter-text-color: darken(@tropical, 10%);
-@syntax-gutter-text-color-selected: lighten(@tropical, 10%);
-@syntax-gutter-background-color: darken(@midnight, 10%);
+@syntax-gutter-text-color: @tropical;
+@syntax-gutter-text-color-selected: @tropical;
+@syntax-gutter-background-color: @midnight;
 @syntax-gutter-background-color-selected: @midnight;
 
 // For git diff info. i.e. in the gutter
