--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -22,8 +22,8 @@
 
 // Gutter colors
 @syntax-gutter-text-color: @tropical;
-@syntax-gutter-text-color-selected: @tropical;
-@syntax-gutter-background-color: @midnight;
+@syntax-gutter-text-color-selected: lighten(@tropical, 10%);
+@syntax-gutter-background-color: darken(@midnight, 5%);
 @syntax-gutter-background-color-selected: @midnight;
 
 // For git diff info. i.e. in the gutter
