Changed darken/lighten colors to hard call outs.

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -16,8 +16,12 @@
 @successgreen: #00B95D;
 
 // colors I've added
+@midnight-dark: #06132c;
 @midnight: #071634;
+@midnight-light: #091c43;
+@tropical-light: #e5f3ff;
 @tropical: #c2e3fe;
+@tropical-dark: #9bd0fd;
 @kashmir: #4d7391;
 @banana: #f9eaad;
 @rogue: #ac3d65;
