--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -5,8 +5,8 @@
 
 // General colors
 @syntax-text-color: @tropical;
-@syntax-cursor-color: lighten(@tropical, 10%);
-@syntax-selection-color: lighten(@midnight, 10%);
+@syntax-cursor-color: @tropical-light;
+@syntax-selection-color: @midnight-light;
 @syntax-background-color: @midnight;
 
 // Guide colors
@@ -22,8 +22,8 @@
 
 // Gutter colors
 @syntax-gutter-text-color: @tropical;
-@syntax-gutter-text-color-selected: lighten(@tropical, 50%);
-@syntax-gutter-background-color: darken(@midnight, 5%);
+@syntax-gutter-text-color-selected: @tropical-light;
+@syntax-gutter-background-color: @midnight-dark;
 @syntax-gutter-background-color-selected: @midnight;
 
 // For git diff info. i.e. in the gutter
