--- a/styles/colors.less
+++ b/styles/colors.less
@@ -15,7 +15,7 @@
 @light-orange: #FEF3C7;
 @successgreen: #00B95D;
 
-// colors I've added
+// Expanse Colors
 @midnight-dark: #06132c;
 @midnight: #071634;
 @midnight-light: #091c43;
