--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -24,7 +24,7 @@
 @syntax-gutter-text-color: @tropical;
 @syntax-gutter-text-color-selected: @tropical-light;
 @syntax-gutter-background-color: @midnight-dark;
-@syntax-gutter-background-color-selected: @midnight;
+@syntax-gutter-background-color-selected: @midnight-light;
 
 // For git diff info. i.e. in the gutter
 @syntax-color-renamed: @kashmir;
